--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.8",
+    "@radix-ui/react-dialog": "^1.0.0",
     "@radix-ui/react-separator": "^1.0.0",
     "@radix-ui/react-toggle-group": "^1.0.0",
     "axios": "^0.27.2",
@@ -19,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.36.1",
+    "react-imask": "^6.4.3",
     "react-router-dom": "^6.4.1",
     "styled-components": "^5.3.6",
     "uuid": "^9.0.0",
